--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,6 +1,6 @@
 <div id="viewWelcome">
 	<div class="jumbotron">
-		<h1>Welcome back, {{CurrentUser.userdisplayas}}!</h1>
+		<h1 ng-i18next="Mainpage.WelcomeBack">Welcome back</h1><h1>, {{CurrentUser.userdisplayas}}!</h1>
 		<p>
 			This is a home page. <br /> It shall contains some descriptions.<br />
 			And it hasn't been done yet.
