--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,20 +2,24 @@
 	<form class="form-signin" name="loginForm">
 	
 <!-- 		<i class="glyphicon glyphicon-log-in"></i> -->
- 		<h2 class="form-signin-heading">Sign in</h2>
+        <h2 class="form-signin-heading" ng-i18next="Login.LoginTitle">Sign in</h2>
 
-		<label for="inputUser" class="sr-only">User</label> <input
-			id="inputUser" class="form-control" placeholder="User name" required
-			autofocus ng-model="credentials.username" ng-minlength="6" /> <label
-			for="inputPassword" class="sr-only">Password</label> <input
-			type="password" id="inputPassword" class="form-control"
-			placeholder="Password" ng-model="credentials.password" required
-			ng-minlength="6">
+		<label for="inputUser" class="sr-only">User</label> 
+        <input id="inputUser" class="form-control" placeholder="{{ 'Login.User' | i18next }}" required
+			autofocus ng-model="credentials.username" ng-minlength="6" /> 
+        
+        <label for="inputPassword" class="sr-only">Password</label> 
+        <input type="password" id="inputPassword" class="form-control"
+               placeholder="{{ 'Login.Password' | i18next }}" ng-model="credentials.password" required
+               ng-minlength="6">
 
-		<button class="btn btn-lg btn-primary btn-block" type="submit"
-			ng-disabled="loginForm.$invalid" ng-click="login()">Sign in</button>
-		<button class="btn btn-lg btn-block" ui-sref="register">Sign
-			up</button>
-	</form>
+        <div class="form-group">
+            <button class="btn btn-lg btn-primary btn-block" type="submit"
+                    ng-disabled="loginForm.$invalid" ng-click="login()" ng-i18next="Login.SignIn">
+                Sign in
+            </button>
+            <button class="btn btn-lg btn-block" ui-sref="register" ng-i18next="Login.SignUp">Sign up</button>
+        </div>
+</form>
 </div>
 
