Multiple languages supporting on the way, part II.

--- a/app/views/financecurrencylist.html
+++ b/app/views/financecurrencylist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			Currency <small> List View </small>
+			Currency <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
