--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			Finance Document <small> List View </small>
+			Finance Document <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
