--- a/app/views/home.html
+++ b/app/views/home.html
@@ -154,11 +154,11 @@
 								<li class="dropdown-header">CDNs</li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 								<li role="separator" class="divider"></li>
-								<li class="dropdown-header">Others</li>
 								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">Themes</a></li>
 								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
 								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
 								<li><a target="_blank" href="http://ui-grid.info/">Angular UI Grid</a></li>
+								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
 	                        </ul>
 	                    </li>
 	                    <li><a href="#/about"><span ng-i18next="Nav.About">About</span></a></li>
