--- a/app/views/learnawardlist.html
+++ b/app/views/learnawardlist.html
@@ -1,7 +1,7 @@
 <div id="viewLearnAward">
 	<div class="page-header">
 		<h2>
-			Learn Awards <small> List View </small>
+			Learn Awards <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
