--- a/app/views/learncategorylist.html
+++ b/app/views/learncategorylist.html
@@ -2,7 +2,7 @@
 
 	<div class="page-header">
 		<h2>
-			Learn Category <small> List View </small>
+			<span ng-i18next="Learn.LearningCategory">Learn Category</span> <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
