--- a/app/views/learnhistorylist.html
+++ b/app/views/learnhistorylist.html
@@ -1,7 +1,7 @@
 <div id="viewLearnHistory">
 	<div class="page-header">
 		<h2>
-			Learn Histories <small> List View </small>
+			Learn Histories <small ng-i18next="Common.ListView"> List View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
