Bring ngJsTree in.
Change-Id: I2fc4003e8e501397d3fa29691bb5b5c63b08020f
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -106,6 +106,7 @@
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span ng-i18next="Nav.Home">Home</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
 	                            <li><a ui-sref="home.userdetail"><span ng-i18next="Nav.UserDetail">User Detail</span></a></li>
+								<li><a ui-sref="home.userlist"><span ng-i18next="Nav.Users">User List</span></a></li>
 	                            <li role="separator" class="divider"></li>
 	                            <li><a href="" ng-click="logout()"><span ng-i18next="Login.Logout">Logout</span></a></li>                            
 	                        </ul>
@@ -142,22 +143,22 @@
 								<li><a target="_blank" href="http://www.tinymce.com/">Select2</a></li>
 								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
 								<li><a target="_blank" href="http://i18next.com/">i18next</a></li>
+								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
-								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li>
+								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI-Bootstrap</a></li>
 								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
-								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI Select</a></li>
-								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
+								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">CDNs</li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 								<li role="separator" class="divider"></li>
-								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">Themes</a></li>
-								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
+								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
 								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
-								<li><a target="_blank" href="http://ui-grid.info/">Angular UI Grid</a></li>
+								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">Themes</a></li>
+								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid in Angular UI</a></li>
 								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
 	                        </ul>
 	                    </li>
