Make ngJsTree work.

--- a/app/views/learncategoryhierarchy.html
+++ b/app/views/learncategoryhierarchy.html
@@ -7,7 +7,6 @@
 	</div>
 	
 	<div class="panel-body">
-		<div js-tree="treeConfig" ng-model="treeData" tree="treeInstance" 
-			tree-events="ready:vm.readyCB;create_node:vm.createCB"></div>
+		<div js-tree="treeConfig" ng-model="treeData" tree="treeInstance"></div>
 	</div>
 </div>
