Now the ngJsTree working!

--- a/app/views/learncategoryhierarchy.html
+++ b/app/views/learncategoryhierarchy.html
@@ -2,8 +2,9 @@
 
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Learn.LearningCategory">Learn Category</span> <small ng-i18next="Common.HierarchyView"> List View </small>
+			<span ng-i18next="Learn.LearningCategory">Learn Category</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
 		</h2>
+		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
 	
 	<div class="panel-body">
