Add Learn Object Hierarchy View.

--- a/app/views/learnobjecthierarchy.html
+++ b/app/views/learnobjecthierarchy.html
@@ -1,8 +1,8 @@
-<div id="viewLearnCategoryHier">
+<div id="viewLearnObjectHier">
 
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Learn.LearningCategory">Learn Category</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
+			<span ng-i18next="Learn.LearningObject">Learn Object</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
