--- a/app/views/home.html
+++ b/app/views/home.html
@@ -118,7 +118,10 @@
 	                            <li><a ui-sref="home.learn.category.list"><span ng-i18next="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.learn.category.hierarchy"><span ng-i18next="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
-	                            <li><a ui-sref="home.learn.object.list"><span ng-i18next="Learn.LearningObject">Learn Object</span></a></li>
+								<li class="dropdown-header"><span ng-i18next="Learn.LearningObject">Learn Object</span></li>
+	                            <li><a ui-sref="home.learn.object.list"><span ng-i18next="Common.ListView">List View</span></a></li>
+	                            <li><a ui-sref="home.learn.object.hierarchy"><span ng-i18next="Common.HierarchyView">Hierarchy View</span></a></li>
+	                            <li role="separator" class="divider"></li>
 								<li><a ui-sref="home.learn.history.list"><span ng-i18next="Learn.LearningHistory">Learn History</span></a></li>
 								<li><a ui-sref="home.learn.award.list"><span ng-i18next="Learn.LearningAward">Learn Award</span></a></li>
 	                        </ul>
