--- a/app/views/home.html
+++ b/app/views/home.html
@@ -158,8 +158,10 @@
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">CDNs</li>
+								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 								<li role="separator" class="divider"></li>
+								<li><a target="_blank" href="http://t4t5.github.io/sweetalert/">Sweet Alert</a></li>
 								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
 								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
 								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">Themes</a></li>
