Apply the hierarchy view to several parts.
Change-Id: Ie5e0013e76445fddd050cd5e5d08abfcdf5dcd1f
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,7 +132,10 @@
 								<li><a ui-sref="home.finance.currency.list"><span ng-i18next="Finance.Currency">Currency</span></a></li>
 	                            <li><a ui-sref="home.finance.accountcategory.list">Account Category</a></li>
 								<li><a ui-sref="home.finance.documenttype.list">Document Type</a></li>
-								<li><a ui-sref="home.finance.transactiontype.list">Transaction Type</a></li>								
+								<li role="separator" class="divider"></li>
+								<li class="dropdown-header"><span ng-i18next="Finance.TransactionType">Transaction Type</span></li>
+	                            <li><a ui-sref="home.finance.transactiontype.list"><span ng-i18next="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.transactiontype.hierarchy"><span ng-i18next="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header"><span ng-i18next="Finance.Accounts">Finance Accounts</span></li>
 	                            <li><a ui-sref="home.finance.account.list"><span ng-i18next="Common.ListView">List View</span></a></li>
