--- a/app/views/financetransactiontypehierarchy.html
+++ b/app/views/financetransactiontypehierarchy.html
@@ -1,8 +1,8 @@
-<div id="viewAccountHier">
+<div id="viewFinanceTransactionTypeHier">
 
 	<div class="page-header">
 		<h2>
-			<span ng-i18next="Finance.Accounts">Finance Accounts</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
+			<span ng-i18next="Finance.TransactionType">Transaction Type</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
 		</h2>
 		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
 	</div>
