Continue working on the project.

--- a/app/views/financeaccounthierarchy.html
+++ b/app/views/financeaccounthierarchy.html
@@ -4,7 +4,8 @@
 		<h2>
 			<span ng-i18next="Finance.Accounts">Finance Accounts</span> <small ng-i18next="Common.HierarchyView"> Hierarchy View </small>
 		</h2>
-		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
+		<button type="button" class="btn btn-primary" ng-click="newItem()" ng-i18next="Common.Create">New</button>
+		<button type="button" class="btn btn-primary" ng-click="refreshHierarchy()" ng-i18next="Common.Refresh">Refresh</button>
 	</div>
 	
 	<div class="panel-body">
