--- a/app/views/home.html
+++ b/app/views/home.html
@@ -95,7 +95,6 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                </button>
-	<!--                 <a class="navbar-brand visible-xs" href="#/home">H.I.H.</a> -->
 	                	<a href="#/home" role="button" class="navbar-brand">
 	                        H.I.H.
 	                    </a>
@@ -157,6 +156,10 @@
 								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
 								<li><a target="_blank" href="http://i18next.com/">i18next</a></li>
 								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
+								<li><a target="_blank" href="http://t4t5.github.io/sweetalert/">Sweet Alert</a></li>
+								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
+								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
+								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">bootswatch</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
@@ -169,10 +172,7 @@
 								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 								<li role="separator" class="divider"></li>
-								<li><a target="_blank" href="http://t4t5.github.io/sweetalert/">Sweet Alert</a></li>
-								<li><a target="_blank" href="https://github.com/i18next/ng-i18next">ng-i18next</a></li>
-								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
-								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">bootswatch</a></li>
+								<li class="dropdown-header">Others</li>
 								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid in Angular UI</a></li>
 								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
 	                        </ul>
