Create Learn Object now working!

--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -10,7 +10,7 @@
 			<label class="control-label col-sm-2" for="iptID" ng-i18next="Common.ID">ID</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-					readonly="readonly" placeholder="{{ "Common.ID" | i18next}}" ng-model="ObjectID">
+					readonly="readonly" placeholder="{{'Common.ID' | i18next}}" ng-model="ObjectID">
 			</div>
 		</div>
 		
@@ -30,7 +30,7 @@
 			<label class="control-label col-sm-2" for="iptName" ng-i18next="Common.Name">Name</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-					placeholder="{{ "Common.Name" | i18next }}" ng-model="ObjectName" required>
+						placeholder="{{'Common.Name' | i18next}}" ng-model="ObjectName" required>
 			</div>
 		</div>
 		
