--- a/app/views/learnobjectlist.html
+++ b/app/views/learnobjectlist.html
@@ -32,15 +32,15 @@
 				<td>
 					<div class="btn-group" role="group">
 						<button type="button" ng-click="displayItem(row)"
-							class="btn-group btn-primary" role="group">
+							class="btn-group btn-primary" role="group" tooltip="{{'Common.Display' | i18next}}">
 							<i class="glyphicon glyphicon-share"> </i>
 						</button>
 						<button type="button" ng-click="editItem(row)"
-							class="btn-group btn-warning" role="group">
+							class="btn-group btn-warning" role="group" tooltip="{{'Common.Edit' | i18next}}">
 							<i class="glyphicon glyphicon-edit"> </i>
 						</button>
 						<button type="button" ng-click="removeItem(row)"
-							class="btn-group btn-danger" role="group">
+							class="btn-group btn-danger" role="group" tooltip="{{'Common.Delete' | i18next}}">
 							<i class="glyphicon glyphicon-trash"> </i>
 						</button>
 					</div>					
