--- a/app/views/learnhistory.html
+++ b/app/views/learnhistory.html
@@ -1,13 +1,13 @@
 <div id="viewLearnHistory" class="container">
 	<div class="page-header">
 		<h2>
-			Learn History<small> {{Activity}}</small>
+			<span ng-i18next="Learn.LearningHistory">Learn History</span><small> {{Activity}}</small>
 		</h2>
 	</div>
 
 	<form class="form-horizontal" role="form" name="frmObj">
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptUser">User:</label>
+			<label class="control-label col-sm-2" for="iptUser" ng-i18next="Login.User">User:</label>
 			<div class="col-sm-10">
 				<select id="iptUser" ng-model="UserID" ng-disabled="isReadonly"
 					ng-options="usr.id as usr.text for usr in UserIDs">
@@ -19,11 +19,8 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptObject">Learn Objects</label>
+			<label class="control-label col-sm-2" for="iptObject" ng-i18next="Learn.LearingObject">Learn Objects</label>
 			<div class="col-sm-10">
-<!-- 				<input type="text" class="form-control" id="iptObject" ng-readonly="isReadonly"
-					placeholder="Name" ng-model="ObjectName" required>
- -->		
 				<ui-select ng-model="SelectedLearnObject.selected" theme="select2"  search-enabled="selectsearchenable" ng-disabled="isReadonly" style="min-width: 300px;">
 			    	<ui-select-match placeholder="Select a learn object or search via the name...">{{$select.selected.name}}</ui-select-match>
 			    	<ui-select-choices repeat="lrnobj in LearnObjects">
@@ -38,7 +35,7 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptDate">Date</label>
+			<label class="control-label col-sm-2" for="iptDate" ng-i18next="Common.Date">Date</label>
 			<div class="input-group col-sm-10">
             	<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="LearnDate" is-open="isDateOpened"            		
             		datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
@@ -49,7 +46,7 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptComment">Comment</label>
+			<label class="control-label col-sm-2" for="iptComment" ng-i18next="Common.Comment">Comment</label>
 			<div class="col-sm-10">
 				<textarea rows="5" id="iptComment" ng-readonly="isReadonly" cols="50"
 					ng-model="Comment"></textarea>
@@ -59,8 +56,8 @@
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-					ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
-				<button class="btn btn-danger" ng-click="close()">Cancel</button>
+					ng-disabled="frmObj.$invalid || !frmObj.$dirty" ng-i18next="Common.Submit">Submit</button>
+				<button class="btn btn-danger" ng-click="close()" ng-i18next="Common.Cancel">Cancel</button>
 			</div>
 		</div>
 		
